2007-08-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* GDK lock awareness
	* More conservatism about reconnecting
	* Fixed a few locking problems with POP
	* Callbacks and destroynotifies of cancelled-removed items

2007-08-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reintroduction of cancellation support (this is experimental)
	* Timezone fix in the summary (remove your caches)
	* Making tny_account_cancel actually work, or at least a little bit
	better than before this commit (cleaning up the queue a bit)

2007-08-01  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reconnect hang fix
	* Invalid cancelled warning fix
	* Tryout fix (I know this doesn't sound very promising) for password questions
	on the mainloop (POP can cause this, in case of an auth error during
	sync operation's reconnect)
	* Added the changed signal to TnyAccount
	* Making tny_account_set_name get propagated to the TnyGtkFolderStore- 
	TreeModel instance.
	* Fixed a kludge in the TnySessionCamel for POP accounts with wrong
	passwords

	* This was a major API change

2007-07-31  Philip Van Hoof  <pvanhoof@gnome.org>

	* Introduction of tny_folder_get_headers_async
	* Adaptation of TnyGtkHeaderListModel to use the new API

	* This was a major API change

2007-07-31  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merging back devel/pvanhoof/sessionwork to trunk/

2007-07-31  Philip Van Hoof  <pvanhoof@gnome.org>

	* Cleaning up, coding style fixes
	* Review of TnyCamelFolder and TnyCamelStoreAccount

2007-07-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various fixes that make Modest actually work with this

2007-07-30  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

	* Fixed some bugs in TnyMergeFolder notification function. This
        method was overwriting data into old change, rather than use the 
	new_change structure to propagate changes to observed folders.

        * Fixed bug in TnyCamelSendQueue related with msg-sent signal